@@ -14,6 +14,11 @@
     "bgnd":"#000",
     "color":"#fff"
   },
+  "tidal":{
+    "name":"tidal",
+    "bgnd":"#000",
+    "color":"#fff"
+  },
   "deezer":{
     "name":"deezer",
     "bgnd":"#fb8715",
@@ -30,6 +35,11 @@
     "color":"#fff"
   },
   "pandora":{
+    "name":"pandora",
+    "bgnd":"#356dfe",
+    "color":"#fff"
+  },
+  "pyrrha":{
     "name":"pandora",
     "bgnd":"#356dfe",
     "color":"#fff"
