@@ -13,6 +13,7 @@
 7. Only group all releases by type if LMS's 'groupArtistAlbumsByReleaseType'
    setting is set to 2
 8. Add icon for ZenRadio.
+9. Add 'tidal' and 'pyrrha' to emblems/track-sources.
 
 4.3.1
 -----
